// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createQueryType > creates query input type: simple 1`] = `
"input Base_Query {
  filter: Base_Filter
}"
`;

exports[`createQueryType > creates query input type: with all options 1`] = `
"input Base_Query {
  filter: Base_Filter
  sortBy: Base_Query_Sort_Input
  limit: String
}"
`;

exports[`createQueryType > creates query input type: with pagination fields 1`] = `
"input Base_Query {
  filter: Base_Filter
  limit: String
}"
`;

exports[`createQueryType > creates query input type: with sort type 1`] = `
"input Base_Query {
  filter: Base_Filter
  sortBy: Base_Query_Sort_Input
}"
`;
